@@ -57,9 +57,6 @@
   algorithm).  The PP code isn't doing that, which means we're doing lots of
   extra primality checks, which aren't cheap in PP.
 
-- I believe we can make the Lehmer/LMO small primes uint32_t, which will
-  give some more memory reduction and a little speed.
-
 - use Math::BigInt instead of require, and return bigints as needed.
   This is a fundamental change in how some functions operate, though likely
   one that most people wouldn't see, and should be less surprise:
